--- a/BN2/outer.html
+++ b/BN2/outer.html
@@ -65,20 +65,20 @@
       <div class="list">
         <dl class="img-list">
           <a href="description.html">
-          <img src="../images/vase1.jpg">
+          <img src="../images/vase1.JPG">
           <div class="price">18,000\<br>꽃병</div>
           </a>
         </dl>
         <dl class="img-list">
-          <img src="../images/vase1.jpg">
+          <img src="../images/vase1.JPG">
           <div class="price">18,000\</div>
         </dl>
         <dl class="img-list">
-          <img src="../images/vase1.jpg">
+          <img src="../images/vase1.JPG">
           <div class="price">18,000\</div>
         </dl>
         <dl class="img-list">
-          <img src="../images/vase1.jpg">
+          <img src="../images/vase1.JPG">
           <div class="price">18,000\</div>
         </dl>
       </div>
